[gd_scene load_steps=10 format=3 uid="uid://dy17q1wahvid6"]

[ext_resource type="Script" uid="uid://bl1q85bawrd0n" path="res://scenes/black_ninja.gd" id="1_e738a"]
[ext_resource type="Shader" uid="uid://de8kwq1p65hls" path="res://scenes/flicker.gdshader" id="2_cojvc"]
[ext_resource type="Texture2D" uid="uid://be3xyr3ldbswf" path="res://graphic/zombieee/zombie_walk2.png" id="3_ppt7a"]
[ext_resource type="Texture2D" uid="uid://dwle6y41twngm" path="res://graphic/zombieee/zombie_walk.png" id="4_cojvc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3cyjj"]
resource_local_to_scene = true
shader = ExtResource("2_cojvc")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/amount = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_p1qyd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ppt7a")
}, {
"duration": 1.0,
"texture": ExtResource("4_cojvc")
}],
"loop": true,
"name": &"walk",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jmj5y"]
size = Vector2(35.5, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ppt7a"]
size = Vector2(3.5, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cojvc"]
size = Vector2(3.5, 3)

[node name="BlackNinja" type="Area2D"]
collision_layer = 4
collision_mask = 18
script = ExtResource("1_e738a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_3cyjj")
sprite_frames = SubResource("SpriteFrames_p1qyd")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.79380393
flip_h = true

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-1, 7.5)
polygon = PackedVector2Array(7, 24.5, -7, 24.5, -7, 23.5, -6, 23.5, -6, 22.5, -4, 22.5, -4, 20.5, -5, 20.5, -5, 19.5, -6, 19.5, -6, 18.5, -7, 18.5, -7, 17.5, -8, 17.5, -8, 14.5, -7, 14.5, -7, 12.5, -6, 12.5, -6, 9.5, -8, 9.5, -8, 5.5, -9, 5.5, -9, -3.5, -10, -3.5, -10, -7.5, -9, -7.5, -9, -9.5, -8, -9.5, -8, -10.5, -6, -10.5, -6, -11.5, -4, -11.5, -4, -12.5, -2, -12.5, -2, -14.5, -3, -14.5, -3, -15.5, -4, -15.5, -4, -18.5, -3, -18.5, -3, -19.5, -2, -19.5, -2, -21.5, -1, -21.5, -1, -22.5, 0, -22.5, 0, -23.5, 1, -23.5, 1, -24.5, 8, -24.5, 8, -23.5, 10, -23.5, 10, -22.5, 12, -22.5, 12, -21.5, 13, -21.5, 13, -16.5, 14, -16.5, 14, -14.5, 13, -14.5, 13, -13.5, 13, -12.5, 12, -12.5, 12, -11.5, 13, -11.5, 13, -9.5, 12, -9.5, 12, -8.5, 10, -8.5, 10, -8.5, 10, -7.5, 7, -7.5, 7, -6.5, 8, -6.5, 8, -4.5, 9, -4.5, 9, -3.5, 10, -3.5, 10, -4.5, 12, -4.5, 13, -4.5, 13, -5.5, 14, -5.5, 14, -6.5, 19, -6.5, 19, -5.5, 21, -5.5, 21, -4.5, 23, -4.5, 23, -2.5, 22, -2.5, 22, -1.5, 21, -1.5, 21, -0.5, 19, -0.5, 19, -1.5, 18, -1.5, 18, -2.5, 17, -2.5, 17, -0.5, 16, -0.5, 16, 0.5, 14, 0.5, 14, -0.5, 14, -1.5, 13, -1.5, 13, -0.5, 12, -0.5, 12, 0.5, 10, 0.5, 10, 2.5, 8, 2.5, 8, 3.5, 5, 3.5, 5, 4.5, 6, 4.5, 6, 6.5, 7, 6.5, 7, 8.5, 6, 8.5, 6, 9.5, 5, 9.5, 5, 11.5, 5, 12.5, 6, 12.5, 6, 13.5, 7, 13.5, 7, 14.5, 8, 14.5, 8, 18.5, 6, 18.5, 6, 19.5, 5, 19.5, 5, 20.5, 4, 20.5, 4, 21.5, 5, 21.5, 5, 22.5, 6, 22.5, 6, 23.5, 7, 23.5)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(4.75, -1)
shape = SubResource("RectangleShape2D_jmj5y")

[node name="RightCliff" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightCliff"]
position = Vector2(11, 32)
shape = SubResource("RectangleShape2D_ppt7a")

[node name="LeftCliff" type="Area2D" parent="."]
position = Vector2(6, 17)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftCliff"]
position = Vector2(-19, 15)
shape = SubResource("RectangleShape2D_cojvc")

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = -14.0
offset_top = -26.0
offset_right = 22.0
offset_bottom = -18.0
show_percentage = false

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="RightCliff" to="." method="_on_right_cliff_body_exited"]
[connection signal="body_exited" from="LeftCliff" to="." method="_on_left_cliff_body_exited"]
